feat: アーキテクチャ整理
